# keepassxc-web-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DECISIONS.md  KICKOFF.md  README.md  TESTING.md  TROUBLESHOOTING.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
backend/app/: main.py
backend/app/api/: dependencies.py  error_handlers.py  schemas.py
backend/app/api/routes/: __init__.py  auth.py  databases.py  entries.py  groups.py  health.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/core/domain/: __init__.py  database.py  entry.py  group.py  session.py
backend/app/core/interfaces/: __init__.py  cache.py  repository.py  security.py
backend/app/infrastructure/cache/: __init__.py  memory_cache.py  redis_cache.py
backend/app/infrastructure/keepassxc/: __init__.py  cli_wrapper.py  command_builder.py  output_parser.py  repository.py
backend/app/infrastructure/security/: __init__.py  encryption.py  jwt_manager.py  session_manager.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_auth_api.py  test_databases_api.py  test_entries_api.py  test_groups_api.py  test_security.py
backend/tests/unit/infrastructure/keepassxc/: __init__.py  test_command_builder.py  test_output_parser.py
frontend/public/: dashboard.html  index.html  login.html
frontend/src/css/: tailwind.css
frontend/templates/: base.html
scripts/: lint.sh  quick-test.sh  start.sh  test.sh  validate-install.sh
