[tool.poetry]
name = "keepassxc-web-manager"
version = "2.0.0-alpha"
description = "Modern web interface to manage KeePassXC databases"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/c0rent1b/keepassxc-web-manager"
repository = "https://github.com/c0rent1b/keepassxc-web-manager"
keywords = ["keepassxc", "password-manager", "web-interface", "fastapi", "alpine-js"]
package-mode = false
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Framework :: FastAPI",
]

[tool.poetry.dependencies]
python = "^3.12"  # Compatible avec 3.12, 3.13+
# Web Framework
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"

# Data Validation
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# Database
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"

# Cache
redis = "^5.0.1"
aiocache = "^0.12.2"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^42.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
slowapi = "^0.1.9"

# Logging
structlog = "^24.1.0"
python-json-logger = "^2.0.7"

# HTTP Client (for testing and future features)
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
faker = "^22.6.0"
factory-boy = "^3.3.0"

# Linting & Formatting
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

# Type stubs
types-aiofiles = "^23.2.0"
types-passlib = "^1.7.7"
types-redis = "^4.6.0"

# Dev tools
ipython = "^8.21.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# RUFF CONFIGURATION (Linting + Formatting)
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

# Exclude directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "PERF",   # performance
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["PLR2004", "S101"]  # Allow magic values and asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY CONFIGURATION (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

# Exclude directories
exclude = [
    "alembic/versions/",
    "tests/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "slowapi.*",
    "aiocache.*",
    "structlog.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Coverage
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=backend/app",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security tests",
    "unit: marks tests as unit tests",
]

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "*/alembic/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "coverage_html"

# =============================================================================
# ALEMBIC (Database Migrations)
# =============================================================================
# Note: Alembic config is in backend/alembic.ini (separate file)

# =============================================================================
# POETRY NOTES
# =============================================================================
# Installation:
#   curl -sSL https://install.python-poetry.org | python3 -
#
# Usage:
#   poetry install              # Install dependencies
#   poetry add <package>        # Add new dependency
#   poetry add --group dev <pkg> # Add dev dependency
#   poetry update               # Update dependencies
#   poetry lock                 # Update lock file
#   poetry run pytest           # Run tests
#   poetry run ruff check .     # Run linting
#   poetry run mypy .           # Run type checking
#   poetry shell                # Activate virtual env
